--- a/src/pages/Shop/ShopProductGrid.module.css
+++ b/src/pages/Shop/ShopProductGrid.module.css
@@ -68,6 +68,7 @@ a{
   flex: 1;
   min-height: 0;
   position: relative;
+  overflow: hidden;
 }
 
 /* Media rectangle (scaled to card) */
